Use ocp-autoconf to generate configure.ac

--- a/autoconf/Makefile.config.in
+++ b/autoconf/Makefile.config.in
@@ -1,23 +1,23 @@
 CONFIGURE_ARGS=@CONFIGURE_ARGS@
-
-OBUILD_DSTDIR=@OBUILD_DSTDIR@
-OBUILD_ROOTDIR=@OBUILD_ROOTDIR@
-
-DATADIR=@datarootdir@
-BINDIR=@bindir@
-LIBDIR=@libdir@
-MANDIR=@mandir@
-TYPEREXDIR=@datadir@
-VERSION=@PACKAGE_VERSION@
-HAS_BYTES=@HAS_BYTES@
-
-OCAMLC=ocamlc.opt
-OCAMLOPT=ocamlopt.opt
-OCAMLDEP=ocamldep.opt
-OCAMLLEX=ocamllex.opt
-OCAMLYACC=ocamlyacc
-CAMLP4O=camlp4o.opt
-
-PACKAGE=@PACKAGE_NAME@
-
-
+ROOTDIR=@ROOTDIR@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+bindir=@bindir@
+libdir=@libdir@
+datarootdir=@datarootdir@
+mandir=@mandir@
+datadir=@datadir@
+ocamldir=@ocamldir@
+metadir=@metadir@
+PACKAGE_NAME=@PACKAGE_NAME@
+PACKAGE_VERSION=@PACKAGE_VERSION@
+OCAMLVERSION=@OCAMLVERSION@
+OCAMLC=@OCAMLC@
+OCAMLOPT=@OCAMLOPT@
+OCAMLDEP=@OCAMLDEP@
+OCAMLMKTOP=@OCAMLMKTOP@
+OCAMLMKLIB=@OCAMLMKLIB@
+OCAMLDOC=@OCAMLDOC@
+OCAMLLIB=@OCAMLLIB@
+OCAMLBIN=@OCAMLBIN@
+OCAML_USE_BINANNOT=@OCAML_USE_BINANNOT@
