Remove ocp-indent dependency from ocp-lint-plugin-text
ocp-indent analysis is now in ocp-lint-plugin-indent

--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -26,7 +26,9 @@ ocaml_unsupported_version = "4.03"
 
 (* Packages needed by the project *)
 need_packages = [
-  "menhirLib"; "ocplib-config"; "ocp-indent";
+  "menhirLib";
+  "ocplib-config";
+  { name="ocp-indent.lib" opam="ocp-indent" }
 ]
 
 (* Tools needed by the project *)
