rename mapper in ppx

--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -16,27 +16,39 @@ project_name = "typerex-lint"
 (* Project Version *)
 project_version = "1.0"
 
+(* Files managed by ocp-autoconf in this project *)
+manage_files = [
+  "push-opam.sh";
+  autoconf;
+]
+
 (* Project Copyright *)
 project_copyright = "Copyright 2016 OCamlPro SAS"
 
 (* Minimal version of OCaml *)
 ocaml_minimal_version = "4.02.0"
 
+(* Version of OCaml not yet supported *)
 ocaml_unsupported_version = "4.03"
 
-(* Packages needed by the project *)
+(* Packages (ocamlfind) needed by the project. They can be specified as *)
+(* a list with items of the forms: *)
+(*  * "findlib" *)
+(*  * ("findlib", "version") *)
+(*  * { name="findlib" version="version" opam="package" } *)
+(* The later form can be used to specify a different opam package name. *)
 need_packages = [
   "menhirLib";
-  "ocplib-config";
+  { name="ocplib-config"; opam = "ocp=build"; version="1.99.16-beta"}
   { name="ocp-indent.lib" opam="ocp-indent" }
 ]
 
-(* Tools needed by the project *)
+(* Tools needed by the project. Tested by ./configure. *)
 need_tools = [
   "ocp-build";
 ]
 
-(* Packages that could be used by the project *)
+(* Packages (ocamlfind) that could be used by the project *)
 optional_packages = [
 ]
 
@@ -44,19 +56,24 @@ optional_packages = [
 need_modules = [
 ]
 
-(* Extra files to be substituted *)
+(* Extra files to be substituted. Their paths should be related to  *)
+(* the autoconf/ subdirectory. *)
 extra_config_files = [
 ]
 
-(* Extra m4 files to be added *)
+(* Extra m4 files to be added. They will be copied in autoconf/m4/. *)
 extra_m4_files = [
 ]
 
-(* Extra variables to be substituted *)
+(* Extra variables to be substituted. These variables will appear *)
+(* directly in autoconf/Makefile.config, and as conf_xxx variables *)
+(* in autoconf/config.ocpgen, where xxx is their lowercase translation. *)
 extra_config_vars = [
 ]
 
-(* Extra variables to be substituted as boolean *)
+(* Extra variables to be substituted as boolean. Same as *)
+(* extra_config_vars, but they will appear as booleans in *)
+(* autoconf/config.ocpgen *)
 extra_bool_vars = [
 ]
 
@@ -65,3 +82,71 @@ need_ocamllex = false
 
 (* Does the project need ocamlyacc *)
 need_ocamlyacc = false
+
+(* Fields of the 'opam' file to generate (other ones should come from *)
+(* the 'opam.trailer' file). *)
+opam_fields = [
+  "opam-version";
+  build;
+  install;
+  remove;
+  depends;
+  available;
+]
+
+(* Maintainer of the OPAM package *)
+opam_maintainer = ""
+
+(* Authors *)
+authors = [
+]
+
+(* URL of project homepage *)
+homepage = ""
+
+(* Name of the project on Github (Organization/Project). Other fields can be inferred from this if left empty *)
+github_project = ""
+
+(* URL of public development repository. *)
+(* If github_project is specified, the value is automatically inferred. *)
+dev_repo = ""
+
+(* Prefix of the download URL. The download URL should be *)
+(* ${download_url_prefix}${package_version}.tar.gz. *)
+(* If github_project is specified, the value is automatically inferred. *)
+download_url_prefix = ""
+
+(* URL where bug reports should be issued. *)
+(* If github_project is specified, the value is automatically inferred. *)
+bug_reports = ""
+
+(* Line to appear in opam build instructions *)
+opam_configure_line = [
+  "./configure";
+  "--prefix";
+  "%{prefix}%";
+  "--with-ocamldir=%{prefix}%/lib";
+  "--with-metadir=%{prefix}%/lib";
+]
+
+(* Commands to call on OPAM remove *)
+opam_remove_commands = [
+]
+
+(* ocp-build packages to install and uninstall. *)
+install_packages = [
+]
+
+(* Version of the format of this file *)
+format_version = 3
+project = {
+
+(* (Deprecated, use project_copyright and remove this option) *)
+  copyright = ""
+
+(* (Deprecated, use project_version and remove this option) *)
+  version = ""
+
+(* (Deprecated, use project_name and remove this option) *)
+  name = ""
+}
