--- a/autoconf/Makefile.config.in
+++ b/autoconf/Makefile.config.in
@@ -1,3 +1,4 @@
+OCAMLFIND=@OCAMLFIND@
 CONFIGURE_ARGS=@CONFIGURE_ARGS@
 ROOTDIR=@ROOTDIR@
 prefix=@prefix@
@@ -11,6 +12,10 @@ ocamldir=@ocamldir@
 metadir=@metadir@
 PACKAGE_NAME=@PACKAGE_NAME@
 PACKAGE_VERSION=@PACKAGE_VERSION@
+OPAM_REPO=@OPAM_REPO@
+OPAM_REPO_OFFICIAL_REMOTE=@OPAM_REPO_OFFICIAL_REMOTE@
+OPAM_REPO_FORK_REMOTE=@OPAM_REPO_FORK_REMOTE@
+DOWNLOAD_URL_PREFIX=@DOWNLOAD_URL_PREFIX@
 OCAMLVERSION=@OCAMLVERSION@
 OCAMLC=@OCAMLC@
 OCAMLOPT=@OCAMLOPT@
