--- a/autoconf/config.ocpgen.in
+++ b/autoconf/config.ocpgen.in
@@ -1,3 +1,4 @@
+conf_ocamlfind="@OCAMLFIND@"
 rootdir="@ROOTDIR@"
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
@@ -10,6 +11,10 @@ ocamldir="@ocamldir@"
 metadir="@metadir@"
 package_name="@PACKAGE_NAME@"
 package_version="@PACKAGE_VERSION@"
+opam_repo="@OPAM_REPO@"
+opam_repo_official_remote="@OPAM_REPO_OFFICIAL_REMOTE@"
+opam_repo_fork_remote="@OPAM_REPO_FORK_REMOTE@"
+download_url_prefix="@DOWNLOAD_URL_PREFIX@"
 conf_ocamlversion="@OCAMLVERSION@"
 conf_ocamlc="@OCAMLC@"
 conf_ocamlopt="@OCAMLOPT@"
