--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -29,7 +29,7 @@ project_copyright = "Copyright 2016 OCamlPro SAS"
 ocaml_minimal_version = "4.02.0"
 
 (* Version of OCaml not yet supported *)
-ocaml_unsupported_version = "4.03"
+ocaml_unsupported_version = ""
 
 (* Packages (ocamlfind) needed by the project. They can be specified as *)
 (* a list with items of the forms: *)
