--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -10,81 +10,84 @@
 
 
 
-(* Project Name *)
+(* [project_name]: Project Name *)
 project_name = "typerex-lint"
 
-(* Project Version *)
+(* [project_version]: Project Version *)
 project_version = "1.0"
 
-(* Files managed by ocp-autoconf in this project *)
+(* [manage_files]: Files managed by ocp-autoconf in this project *)
 manage_files = [
   "push-opam.sh";
   autoconf;
 ]
 
-(* Project Copyright *)
+(* [project_copyright]: Project Copyright *)
 project_copyright = "Copyright 2016 OCamlPro SAS"
 
-(* Minimal version of OCaml *)
+(* [ocaml_minimal_version]: Minimal version of OCaml *)
 ocaml_minimal_version = "4.02.0"
 
-(* Version of OCaml not yet supported *)
+(* [ocaml_unsupported_version]: Version of OCaml not yet supported *)
 ocaml_unsupported_version = ""
 
-(* Packages (ocamlfind) needed by the project. They can be specified as *)
-(* a list with items of the forms: *)
-(*  * "findlib" *)
-(*  * ("findlib", "version") *)
-(*  * { name="findlib" version="version" opam="package" } *)
+(* [need_packages]: Packages (ocamlfind) needed by the project.         *)
+(* They can be specified as a list with items of the forms:             *)
+(*  * "findlib"                                                         *)
+(*  * ("findlib", "version")                                            *)
+(*  * { name="findlib" version="version" opam="package" }               *)
 (* The later form can be used to specify a different opam package name. *)
 need_packages = [
-  "menhirLib";
-  { name="ocplib-config" opam = "ocp-build" }
-  { name="ocp-indent.lib" opam="ocp-indent" }
+  ppx_tools;
+  { opam = menhir name = menhirLib };
+  { opam = "ocp-build" name = "ocplib-config" };
+  { opam = "ocp-indent" name = "ocp-indent.lib" };
 ]
 
-(* Tools needed by the project. Tested by ./configure. *)
+(* [need_tools]: Tools needed by the project. Tested by ./configure. *)
 need_tools = [
   "ocp-build";
 ]
 
-(* Packages (ocamlfind) that could be used by the project *)
+(* [optional_packages]: ocamlfind packages that could be used by the project *)
 optional_packages = [
 ]
 
-(* Modules needed by the project *)
+(* [need_modules]: Modules needed by the project *)
 need_modules = [
 ]
 
-(* Extra files to be substituted. Their paths should be related to  *)
-(* the autoconf/ subdirectory. *)
+(* [extra_config_files]: Extra files to be substituted.         *)
+(* Their paths should be related to the autoconf/ subdirectory. *)
 extra_config_files = [
 ]
 
-(* Extra m4 files to be added. They will be copied in autoconf/m4/. *)
+(* [extra_m4_files]: Extra m4 files to be added. *)
+(* They will be copied in autoconf/m4/.          *)
 extra_m4_files = [
 ]
 
-(* Extra variables to be substituted. These variables will appear *)
-(* directly in autoconf/Makefile.config, and as conf_xxx variables *)
-(* in autoconf/config.ocpgen, where xxx is their lowercase translation. *)
+(* [extra_config_vars]: Extra variables to be substituted.           *)
+(* These variables will appear directly in autoconf/Makefile.config, *)
+(* and as conf_xxx variables in autoconf/config.ocpgen, where xxx is *)
+(* their lowercase translation.                                      *)
 extra_config_vars = [
 ]
 
-(* Extra variables to be substituted as boolean. Same as *)
-(* extra_config_vars, but they will appear as booleans in *)
-(* autoconf/config.ocpgen *)
+(* [extra_bool_vars]: Extra variables to be substituted as boolean. Same as *)
+(* extra_config_vars, but they will appear as booleans in                   *)
+(* autoconf/config.ocpgen                                                   *)
 extra_bool_vars = [
 ]
 
-(* Does the project need ocamllex *)
+(* [need_ocamllex]: Does the project need ocamllex *)
 need_ocamllex = false
 
-(* Does the project need ocamlyacc *)
+(* [need_ocamlyacc]: Does the project need ocamlyacc *)
 need_ocamlyacc = false
 
-(* Fields of the 'opam' file to generate (other ones should come from *)
-(* the 'opam.trailer' file). *)
+(* [opam_fields]: Fields of the 'opam' file to generate.  *)
+(* (other ones should come from the 'opam.trailer' file). *)
 opam_fields = [
   "opam-version";
   build;
@@ -94,33 +97,35 @@ opam_fields = [
   available;
 ]
 
-(* Maintainer of the OPAM package *)
+(* [opam_maintainer]: Maintainer of the OPAM package *)
 opam_maintainer = ""
 
-(* Authors *)
+(* [authors]: Authors *)
 authors = [
 ]
 
-(* URL of project homepage *)
+(* [homepage]: URL of project homepage *)
 homepage = ""
 
-(* Name of the project on Github (Organization/Project). Other fields can be inferred from this if left empty *)
+(* [github_project]: Name of the project on Github (Organization/Project). *)
+(* Other fields can be inferred from this if left empty                    *)
 github_project = ""
 
-(* URL of public development repository. *)
+(* [dev_repo]: URL of public development repository.                    *)
 (* If github_project is specified, the value is automatically inferred. *)
 dev_repo = ""
 
-(* Prefix of the download URL. The download URL should be *)
-(* ${download_url_prefix}${package_version}.tar.gz. *)
+(* [download_url_prefix]: Prefix of the download URL.                   *)
+(* The download URL should be:                                          *)
+(*    ${download_url_prefix}${package_version}.tar.gz.                  *)
 (* If github_project is specified, the value is automatically inferred. *)
 download_url_prefix = ""
 
-(* URL where bug reports should be issued. *)
+(* [bug_reports]: URL where bug reports should be issued.               *)
 (* If github_project is specified, the value is automatically inferred. *)
 bug_reports = ""
 
-(* Line to appear in opam build instructions *)
+(* [opam_configure_line]: Line to appear in opam build instructions *)
 opam_configure_line = [
   "./configure";
   "--prefix";
@@ -129,24 +134,27 @@ opam_configure_line = [
   "--with-metadir=%{prefix}%/lib";
 ]
 
-(* Commands to call on OPAM remove *)
+(* [opam_remove_commands]: Commands to call on OPAM remove *)
 opam_remove_commands = [
 ]
 
-(* ocp-build packages to install and uninstall. *)
+(* [install_packages]: ocp-build packages to install and uninstall. *)
 install_packages = [
 ]
 
-(* Version of the format of this file *)
-format_version = 3
-project = {
+(* [format_version]: Version of the format of this file *)
+format_version = 4
 
-(* (Deprecated, use project_copyright and remove this option) *)
-  copyright = ""
+(* [travis_versions]: Versions of OCaml to build on Travis. *)
+travis_versions = [
+  system;
+  "3.12.1";
+  "4.01.0";
+  "4.02.3";
+  "4.03.0";
+]
 
-(* (Deprecated, use project_version and remove this option) *)
-  version = ""
-
-(* (Deprecated, use project_name and remove this option) *)
-  name = ""
-}
+(*
+ The following options are not used (errors, obsolete, ...) 
+*)
+project = { copyright = "" version = "" name = "" }
