Add checks on 4.03 and 4.04 to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ script: sh -ex .travis-ci.sh
 env:
   - OCAML_VERSION=4.02.1
   - OCAML_VERSION=4.02.3
+  - OCAML_VERSION=4.03.0
+  - OCAML_VERSION=4.04.0
