Add optional dependancies for ocp-lint-doc

--- a/autoconf/Makefile.config.in
+++ b/autoconf/Makefile.config.in
@@ -26,3 +26,5 @@ OCAMLDOC=@OCAMLDOC@
 OCAMLLIB=@OCAMLLIB@
 OCAMLBIN=@OCAMLBIN@
 OCAML_USE_BINANNOT=@OCAML_USE_BINANNOT@
+tyxml_ENABLED=@tyxml_ENABLED@
+omd_ENABLED=@omd_ENABLED@
