--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -16,7 +16,9 @@ project_name = "typerex-lint"
 (* [project_version]: Project Version *)
 project_version = "1.0"
 
-(* [manage_files]: Files managed by ocp-autoconf in this project *)
+(* [manage_files]: Files managed by ocp-autoconf in this project.           *)
+(* Note that 'autoconf' here means the *directory* autoconf, i.e. all files *)
+(* in that directory.                                                       *)
 manage_files = [
   "push-opam.sh";
   autoconf;
@@ -51,6 +53,8 @@ need_tools = [
 
 (* [optional_packages]: ocamlfind packages that could be used by the project *)
 optional_packages = [
+  tyxml;
+  omd;
 ]
 
 (* [need_modules]: Modules needed by the project *)
@@ -143,7 +147,7 @@ install_packages = [
 ]
 
 (* [format_version]: Version of the format of this file *)
-format_version = 4
+format_version = 5
 
 (* [travis_versions]: Versions of OCaml to build on Travis. *)
 travis_versions = [
