--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -14,7 +14,7 @@
 project_name = "typerex-lint"
 
 (* [project_version]: Project Version *)
-project_version = "1.0"
+project_version = "1.1"
 
 (* [manage_files]: Files managed by ocp-autoconf in this project.           *)
 (* Note that 'autoconf' here means the *directory* autoconf, i.e. all files *)
@@ -44,6 +44,12 @@ need_packages = [
   { opam = menhir name = menhirLib };
   { opam = "ocp-build" name = "ocplib-config" };
   { opam = "ocp-indent" name = "ocp-indent.lib" };
+  "js_of_ocaml";
+  "tyxml";
+  "lwt";
+  "omd";
+  "yojson";
+  "js_of_ocaml-tyxml";
 ]
 
 (* [need_tools]: Tools needed by the project. Tested by ./configure. *)
