--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -22,13 +22,14 @@ project_version = "1.1"
 manage_files = [
   "push-opam.sh";
   autoconf;
+  "opam";
 ]
 
 (* [project_copyright]: Project Copyright *)
 project_copyright = "Copyright 2016 OCamlPro SAS"
 
 (* [ocaml_minimal_version]: Minimal version of OCaml *)
-ocaml_minimal_version = "4.02.0"
+ocaml_minimal_version = "4.02.3"
 
 (* [ocaml_unsupported_version]: Version of OCaml not yet supported *)
 ocaml_unsupported_version = ""
@@ -42,7 +43,7 @@ ocaml_unsupported_version = ""
 need_packages = [
   ppx_tools;
   { opam = menhir name = menhirLib };
-  { opam = "ocp-build" name = "ocplib-config" };
+  { opam = "ocp-build" name = "ocplib-config" version = "1.99.20-beta" };
   { opam = "ocp-indent" name = "ocp-indent.lib" };
   "js_of_ocaml";
   "tyxml";
@@ -50,6 +51,7 @@ need_packages = [
   "omd";
   "yojson";
   "js_of_ocaml-tyxml";
+  "js_of_ocaml-camlp4";
 ]
 
 (* [need_tools]: Tools needed by the project. Tested by ./configure. *)
@@ -94,22 +96,11 @@ need_ocamllex = false
 (* [need_ocamlyacc]: Does the project need ocamlyacc *)
 need_ocamlyacc = false
 
-(* [opam_fields]: Fields of the 'opam' file to generate.  *)
-(* (other ones should come from the 'opam.trailer' file). *)
-opam_fields = [
-  "opam-version";
-  build;
-  install;
-  remove;
-  depends;
-  available;
-]
-
 (* [opam_maintainer]: Maintainer of the OPAM package *)
-opam_maintainer = ""
+opam_maintainer =  "OCamlPro <typerex@ocamlpro.com>"
 
 (* [authors]: Authors *)
-authors = [
+authors = [ "OCamlPro <typerex@ocamlpro.com>"
 ]
 
 (* [homepage]: URL of project homepage *)
@@ -117,7 +108,7 @@ homepage = ""
 
 (* [github_project]: Name of the project on Github (Organization/Project). *)
 (* Other fields can be inferred from this if left empty                    *)
-github_project = ""
+github_project = "OCamlPro/typerex-lint"
 
 (* [dev_repo]: URL of public development repository.                    *)
 (* If github_project is specified, the value is automatically inferred. *)
@@ -136,14 +127,12 @@ bug_reports = ""
 (* [opam_configure_line]: Line to appear in opam build instructions *)
 opam_configure_line = [
   "./configure";
-  "--prefix";
-  "%{prefix}%";
-  "--with-ocamldir=%{prefix}%/lib";
-  "--with-metadir=%{prefix}%/lib";
+  "--prefix=%{prefix}%";
 ]
 
 (* [opam_remove_commands]: Commands to call on OPAM remove *)
 opam_remove_commands = [
+  [ "make"; "uninstall" ]
 ]
 
 (* [install_packages]: ocp-build packages to install and uninstall. *)
