--- a/ocp-autoconf.config
+++ b/ocp-autoconf.config
@@ -23,6 +23,9 @@ manage_files = [
   "push-opam.sh";
   autoconf;
   "opam";
+  ".travis.yml";
+  "autoconf/travis-install.sh";
+  "autoconf/travis-ci.sh";
 ]
 
 (* [project_copyright]: Project Copyright *)
@@ -145,10 +148,11 @@ format_version = 5
 (* [travis_versions]: Versions of OCaml to build on Travis. *)
 travis_versions = [
   system;
-  "3.12.1";
-  "4.01.0";
   "4.02.3";
   "4.03.0";
+  "4.04.0";
+  "4.05.0";
+  "4.06.0";
 ]
 
 (*
